# secure-2pc-package

./: CMakeLists.txt  hosts
benchmark/: test_cases.h
include/accelerate/: SimdSupport.h
include/base/: AbstractSecureExecutor.h
include/comm/: Comm.h
include/compute/batch/bool/: BoolAndBatchExecutor.h  BoolLessBatchExecutor.h
include/compute/single/bool/: BoolMutexExecutor.h
include/conf/: Conf.h
include/parallel/: ThreadPoolSupport.h
include/utils/: System.h
src/accelerate/: SimdSupport.cpp
src/compute/batch/bool/: BoolAndBatchExecutor.cpp  BoolLessBatchExecutor.cpp  BoolMutexBatchExecutor.cpp
src/compute/single/arith/: ArithLessExecutor.cpp
src/compute/single/bool/: BoolLessExecutor.cpp  BoolMutexExecutor.cpp
src/secret/: Secrets.cpp
src/utils/: System.cpp
